objects/TW1_Agendamento__c.object
<CustomObject>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Agendamentos</relationshipLabel>
        <relationshipName>Agendamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Comentarios__c</fullName>
        <label>Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agendamentos</relationshipLabel>
        <relationshipName>Agendamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Contato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agendamentos</relationshipLabel>
        <relationshipName>Agendamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Hora_Agendamento__c</fullName>
        <formula>TEXT(TW1_Data_do_Agendamento__c) &amp; &quot; &quot;&amp; TEXT(TW1_Hora__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data/Hora Agendamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_Agendamento__c</fullName>
        <label>Data do Agendamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_prevista_para_novo_agendamento__c</fullName>
        <label>Data prevista para novo agendamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empreendimento</label>
        <referenceTo>TW1_Empreendimento__c</referenceTo>
        <relationshipLabel>Agendamentos</relationshipLabel>
        <relationshipName>Agendamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Hora__c</fullName>
        <label>Hora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Responsavel__c</fullName>
        <formula>TEXT(TW1_Unidade__r.TW1_Bloco__r.TW1_Responsavel_Manutencao_Vistoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsável</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agendado</fullName>
                </value>
                <value>
                    <fullName>Concluído com sucesso</fullName>
                    <label>Concluído com sucesso - Vistoria Aprovada</label>
                </value>
                <value>
                    <fullName>Cancelado pelo Cliente</fullName>
                </value>
                <value>
                    <fullName>Cancelado pela Engenharia</fullName>
                    <label>Cancelado pela Engenharia/Manutenção</label>
                </value>
                <value>
                    <fullName>Cliente não compareceu</fullName>
                </value>
                <value>
                    <fullName>Cancelado por antecipação</fullName>
                </value>
                <value>
                    <fullName>Concluído Vistoria Reprovada</fullName>
                    <label>Concluído - Vistoria Reprovada</label>
                </value>
                <value>
                    <fullName>Novo</fullName>
                    <isActive>false</isActive>
                    <label>Novo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <formula>TW1_Caso__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agendamentos</relationshipLabel>
        <relationshipName>Agendamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Agendamento</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Empreendimento__c</columns>
        <columns>TW1_Conta__c</columns>
        <columns>TW1_Contato__c</columns>
        <columns>TW1_Data_Hora_Agendamento__c</columns>
        <columns>TW1_Caso__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>A# {00000000}</displayFormat>
        <label>Agenda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agendamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ImpedirAlteracaoConcluido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     NOT(ISCHANGED(IsClosed__c)),
     IsClosed__c = True
   )</errorConditionFormula>
        <errorMessage>Depois de encerrado/Cancelado o agendamento não pode ser alterado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImpedirMaisDeUmAgendamentoAberto</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISNEW(),
     TW1_Caso__r.TW1_Agendamentos_Abertos__c &gt; 0
   )</errorConditionFormula>
        <errorMessage>Existe um agendamento em aberto neste Caso. Só pode haver um agendamento aberto por Caso. Favor tratar o agendamento aberto antes de abrir um novo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impedir_cancelamento_engenharia_pelo_RC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(TW1_Status__c),   
    ISPICKVAL(TW1_Status__c,&quot;Cancelado pela Engenharia&quot;),
    OR(NOT($Profile.Name = &quot;Engenharia&quot;),
       NOT($Profile.Name = &quot;Manutenção&quot;))   


    )</errorConditionFormula>
        <errorMessage>Somente um usuário da engenharia pode atualizar o status para &quot;Cancelado pela Engenharia/Manutenção&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impedir_data_anterior_a_data_de_inicio</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISNEW(),
TW1_Data_do_Agendamento__c   &lt;  TW1_Unidade__r.TW1_Data_inicio_para_agendar_vistoria__c
)</errorConditionFormula>
        <errorMessage>A data do agendamento tem que ser a partir da data inicio para agendar a vistoria.
Esta informação aparece na tela do caso</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>garantir_preenher_nova_data_agendamento</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(TW1_Status__c),
     ISPICKVAL(TW1_Status__c,&quot;Cancelado pela Engenharia&quot;),
     ISBLANK(TEXT(TW1_Data_prevista_para_novo_agendamento__c))
    )</errorConditionFormula>
        <errorDisplayField>TW1_Data_prevista_para_novo_agendamento__c</errorDisplayField>
        <errorMessage>Antes de cancelar, favor informar data prevista para novo agendamento.</errorMessage>
    </validationRules>
</CustomObject>